chore: Update the i18n texts

--- a/packages/locales/import/en.json
+++ b/packages/locales/import/en.json
@@ -51,6 +51,7 @@
   "common.label.enable_title": "Enable {1}",
   "common.label.end_date": "End Date",
   "common.label.entity": "Entity",
+  "common.label.entity_type": "Entity Type",
   "common.label.error": "Error",
   "common.label.export": "Export",
   "common.label.false": "False",
