fix:  Fixed the issue of selecting integrated form restrictions when adding devices

--- a/packages/locales/import/en.json
+++ b/packages/locales/import/en.json
@@ -260,6 +260,8 @@
   "setting.credentials.edit_http": "Edit HTTP Credential",
   "setting.credentials.edit_mqtt": "Edit MQTT Credential",
   "setting.credentials.edit_smtp": "Edit SMTP Settings",
+  "setting.credentials.http": "HTTP",
+  "setting.credentials.mqtt": "MQTT",
   "setting.credentials.smtp_addr": "SMTP Server Address",
   "setting.credentials.smtp_title": "System Mail Server Settings（SMTP)",
   "setting.credentials.white_label": "Enterprise Settings",
@@ -391,7 +393,7 @@
   "valid.input.decimals": "Please enter the correct decimal number.",
   "valid.input.email": "Please enter a valid email address with XXX@XXX.XX format. It must be 5 to 255 characters long.",
   "valid.input.form_list_name_no_repeat": "The name of the form item cannot be repeated.",
-  "valid.input.hex_number": "Input numbers only.",
+  "valid.input.hex_number": "Only hexadecimal values ​​are allowed.",
   "valid.input.image": "Please choose an image with .jpg, .png or .jpeg file format.",
   "valid.input.integer_positive_negative_zero": "Please enter a positive/negative integer, or zero.",
   "valid.input.integer_positive_zero": "Please enter a positive integer (Includes Zero).",
