--- a/packages/locales/import/zh.json
+++ b/packages/locales/import/zh.json
@@ -260,6 +260,8 @@
   "setting.credentials.edit_http": "编辑HTTP凭证",
   "setting.credentials.edit_mqtt": "编辑MQTT凭证",
   "setting.credentials.edit_smtp": "编辑 SMTP 设置",
+  "setting.credentials.http": "HTTP",
+  "setting.credentials.mqtt": "MQTT",
   "setting.credentials.smtp_addr": "SMTP 服务器地址",
   "setting.credentials.smtp_title": "系统邮箱服务器设置（SMTP）",
   "setting.credentials.white_label": "企业设置",
@@ -391,7 +393,7 @@
   "valid.input.decimals": "请输入正确的小数。",
   "valid.input.email": "请输入有效的电子邮件地址，格式为XXX@XXX.XX。长度应为5到255个字符。",
   "valid.input.form_list_name_no_repeat": "表单项名称不能重复。",
-  "valid.input.hex_number": "仅输入数字。",
+  "valid.input.hex_number": "只允许十六进制数值。",
   "valid.input.image": "请选择.jpg、.png或.jpeg格式的图片。",
   "valid.input.integer_positive_negative_zero": "请输入正整数/负整数或零。",
   "valid.input.integer_positive_zero": "请输入正整数（包括零）。",
