--- a/packages/locales/src/lang/en/global.json
+++ b/packages/locales/src/lang/en/global.json
@@ -183,7 +183,7 @@
     "valid.input.decimals": "Please enter the correct decimal number.",
     "valid.input.email": "Please enter a valid email address with XXX@XXX.XX format. It must be 5 to 255 characters long.",
     "valid.input.form_list_name_no_repeat": "The name of the form item cannot be repeated.",
-    "valid.input.hex_number": "Input numbers only.",
+    "valid.input.hex_number": "Only hexadecimal values ​​are allowed.",
     "valid.input.image": "Please choose an image with .jpg, .png or .jpeg file format.",
     "valid.input.integer_positive_negative_zero": "Please enter a positive/negative integer, or zero.",
     "valid.input.integer_positive_zero": "Please enter a positive integer (Includes Zero).",
