fix: Fix when the entity replication only changed the name and the create fail

--- a/packages/locales/import/zh.json
+++ b/packages/locales/import/zh.json
@@ -51,7 +51,7 @@
   "common.label.enable_title": "启用{1}",
   "common.label.end_date": "结束时间",
   "common.label.entity": "实体",
-  "common.label.entity_type": "Entity Type",
+  "common.label.entity_type": "实体类型",
   "common.label.error": "错误",
   "common.label.export": "导出",
   "common.label.false": "False",
