--- a/packages/locales/src/lang/en/error.json
+++ b/packages/locales/src/lang/en/error.json
@@ -17,5 +17,12 @@
     "error.http.token_invalid": "The token is invalid, please try again.",
     "error.http.token_not_found": "Your account hasn't been signed in.",
     "error.http.user_has_no_permission": "Current user has no privileges",
-    "error.http.user_register_email_exist": "This User Register Email Already Exists."
+    "error.http.user_register_email_exist": "This User Register Email Already Exists.",
+    "error.http.server_token_invalid": "The token is invalid and the service refuses to connect.",
+    "error.http.server_not_reachable": "Service unavailable",
+    "error.http.server_token_access_denied": "Token rejected",
+    "error.http.server_data_not_found": "Model not found",
+    "error.http.server_rate_limit_exceeded": "Service interface current limit",
+    "error.http.server_model_worker_busy": "Model processing capacity reaches the upper limit",
+    "error.http.server_invalid_input_data": "Incorrect input parameters"
 }
