--- a/packages/locales/src/lang/cn/setting.json
+++ b/packages/locales/src/lang/cn/setting.json
@@ -76,5 +76,16 @@
     "setting.integration.webhook_status_error": "Webhook错误",
     "setting.integration.webhook_status_ready": "Webhook就绪",
     "setting.integration.webhook_status_waiting": "等待配置",
-    "setting.integration.webhook_url": "Webhook URL"
+    "setting.integration.webhook_url": "Webhook URL",
+    "setting.integration.service_manage": "服务管理",
+    "setting.integration.device_bind": "设备绑定",
+    "setting.integration.connected": "已连接",
+    "setting.integration.not_connected": "未连接",
+    "setting.integration.ai_server_url": "服务IP地址",
+    "setting.integration.token": "Token凭证",
+    "setting.integration.ai_update_model": "更新模型服务",
+    "setting.integration.ai_model_reasoning": "模型推理服务",
+    "setting.integration.ai_update_model_tip": "确定要同步模型列表？确定后可刷新当前模型推理服务。",
+    "setting.integration.ai_update_model_desc": "刷新当前模型推理服务",
+    "setting.integration.ai_model_reasoning_desc": "模型推理服务描述"
 }
