feat: Add ai inference service test modal

--- a/packages/locales/src/lang/en/global.json
+++ b/packages/locales/src/lang/en/global.json
@@ -233,5 +233,8 @@
     "valid.input.value": "Input value: {0} only.",
     "valid.input.version": "The version number does not comply with the specification.",
     "valid.resp.at_least_one": "Please select at least one {1}.",
-    "common.label.connect_status": "Status"
+    "common.label.connect_status": "Status",
+    "common.label.upload": "Upload",
+    "common.placeholder.input_image_url": "Please enter image URL",
+    "common.label.result": "Result"
 }
