feat: Complete the AI inference test

--- a/packages/locales/src/lang/en/setting.json
+++ b/packages/locales/src/lang/en/setting.json
@@ -91,7 +91,7 @@
     "setting.integration.ai_update_model_desc": "Refresh the current model inference service",
     "setting.integration.ai_model_reasoning_desc": "Model Inference Service Description",
     "setting.integration.generate_infer_result": "Generate Inference Result",
-    "setting.integration.ai_model_param_input_tip": "Enter the parameters on the left, and the preview of the inference result will be displayed here",
+    "setting.integration.ai_model_param_input_tip": "Enter the parameters on the left,<br />and the preview of the inference result will be displayed here",
     "setting.integration.ai_infer_service_title": "{1} Model Inference Service",
     "setting.integration.ai_click_to_view_infer_result": "Click to view inference result (JSON)",
     "setting.integration.ai_bind_device": "Bind Device"
