--- a/packages/locales/src/lang/en/setting.json
+++ b/packages/locales/src/lang/en/setting.json
@@ -94,5 +94,15 @@
     "setting.integration.ai_model_param_input_tip": "Enter the parameters on the left,<br />and the preview of the inference result will be displayed here",
     "setting.integration.ai_infer_service_title": "{1} Model Inference Service",
     "setting.integration.ai_click_to_view_infer_result": "Click to view inference result (JSON)",
-    "setting.integration.ai_bind_device": "Bind Device"
+    "setting.integration.ai_bind_device": "Bind Device",
+    "setting.integration.ai_bind_device_choose_device": "Choose Device",
+    "setting.integration.ai_bind_device_ai_settings": "AI Settings",
+    "setting.integration.ai_infer_mode_setting": "Inference mode settings",
+    "setting.integration.ai_infer_result_setting": "Inference result settings",
+    "setting.integration.ai_infer_result_area_setting": "{1} Regional settings",
+    "setting.integration.ai_infer_mode_add_area": "Add area",
+    "setting.integration.ai_infer_single_image": "Single-image inference",
+    "setting.integration.ai_infer_single_image_desc": "When the image data corresponding to the binding device is updated, the AI model API will be requested to obtain the inference result.",
+    "setting.integration.ai_infer_area_cut_image": "Area cut-image inference",
+    "setting.integration.ai_infer_area_cut_image_desc": "Multiple areas of the target image can be drawn, and the drawing areas can be sent to AI as images for inference."
 }
