--- a/packages/locales/src/lang/cn/setting.json
+++ b/packages/locales/src/lang/cn/setting.json
@@ -89,5 +89,38 @@
     "setting.integration.ai_model_reasoning": "模型推理服务",
     "setting.integration.ai_update_model_tip": "确定要同步模型列表？确定后可刷新当前模型推理服务。",
     "setting.integration.ai_update_model_desc": "刷新当前模型推理服务",
-    "setting.integration.ai_model_reasoning_desc": "模型推理服务描述"
+    "setting.integration.ai_model_reasoning_desc": "模型推理服务描述",
+    "setting.integration.device_template": "设备模板管理",
+    "setting.integration.mqtt_broker": "MQTT Broker",
+    "setting.integration.valid_repeat_char": "不能有重复字符",
+    "setting.integration.mqtt_server_url": "MQTT 服务器地址",
+    "setting.integration.mqtt_broker_port": "MQTT Broker Port",
+    "setting.integration.mqtt_broker_helper_text": "MQTT Broker Helper Text",
+    "setting.integration.device_template_name": "设备模板名称",
+    "setting.integration.mqtt_topic": "Topic模式",
+    "setting.integration.test_data": "测试数据",
+    "setting.integration.device_topic": "设备Topic",
+    "setting.integration.device_entity_design": "设备实体定义",
+    "setting.integration.add_device_template": "添加设备模板",
+    "setting.integration.edit_device_template": "编辑设备模板",
+    "setting.integration.view_doc": "查看文档",
+    "setting.integration.bulk_del_template_desc": "确认要批量删除这 {1} 个设备模版吗？",
+    "setting.integration.del_template_desc": "确认要删除该设备模版吗？该操作将同步删除已关联设备及其所有数据！",
+    "setting.integration.gen_simulating_data": "生成模拟数据",
+    "setting.integration.data_report": "模拟上报",
+    "setting.integration.generating_simulated_data": "正在生成模拟数据",
+    "setting.integration.simulated_data_report_tip": "在左侧输入原始数据\n模拟上报结果预览将在此处显示",
+    "setting.integration.parse_result": "解析结果",
+    "setting.integration.entity_data_value": "实体数据值",
+    "setting.valid.string": "{1} 字段值必须是String类型。",
+    "setting.valid.long": "{1} 字段值必须是Long类型。",
+    "setting.valid.double": "{1} 字段值必须是Double类型。",
+    "setting.valid.boolean": "{1} 字段值必须是Boolean类型。",
+    "setting.valid.enum": "{1} 字段内容是枚举项为 [{2}] 其中之一。",
+    "setting.valid.hex": "{1} 字段值必须是16进制类型。",
+    "setting.valid.base64": "{1} 字段值必须是Base64类型。",
+    "setting.valid.regex": "{1} 字段值必须符合正则 {2}。",
+    "setting.valid.len_range": "{1} 字段值长度必须是 {2} 之一。",
+    "setting.valid.fraction_digits": "{1} 字段值的小数位数长度应为 {2}。",
+    "setting.valid.url_image": "{1} 字段值应为合法的图片地址。"
 }
