--- a/packages/locales/src/lang/en/setting.json
+++ b/packages/locales/src/lang/en/setting.json
@@ -104,5 +104,38 @@
     "setting.integration.ai_infer_single_image": "Single-image inference",
     "setting.integration.ai_infer_single_image_desc": "When the image data corresponding to the binding device is updated, the AI model API will be requested to obtain the inference result.",
     "setting.integration.ai_infer_area_cut_image": "Area cut-image inference",
-    "setting.integration.ai_infer_area_cut_image_desc": "Multiple areas of the target image can be drawn, and the drawing areas can be sent to AI as images for inference."
+    "setting.integration.ai_infer_area_cut_image_desc": "Multiple areas of the target image can be drawn, and the drawing areas can be sent to AI as images for inference.",
+    "setting.integration.device_template": "Device template management",
+    "setting.integration.mqtt_broker": "MQTT Broker",
+    "setting.integration.valid_repeat_char": "No repeated characters",
+    "setting.integration.mqtt_server_url": "MQTT server address",
+    "setting.integration.mqtt_broker_port": "MQTT Broker Port",
+    "setting.integration.mqtt_broker_helper_text": "MQTT Broker Helper Text",
+    "setting.integration.device_template_name": "Device template name",
+    "setting.integration.mqtt_topic": "Topic Mode",
+    "setting.integration.test_data": "Test Data",
+    "setting.integration.device_topic": "Device Topic",
+    "setting.integration.device_entity_design": "Device entity definition",
+    "setting.integration.add_device_template": "Add device template",
+    "setting.integration.edit_device_template": "Edit device template",
+    "setting.integration.view_doc": "View Document",
+    "setting.integration.bulk_del_template_desc": "Are you sure you want to delete these {1} device templates in batches?",
+    "setting.integration.del_template_desc": "Are you sure you want to delete this device template? This operation will simultaneously delete the associated device and all its data!",
+    "setting.integration.gen_simulating_data": "Generate simulated data",
+    "setting.integration.data_report": "Simulation report",
+    "setting.integration.generating_simulated_data": "Generating simulated data",
+    "setting.integration.simulated_data_report_tip": "Enter the original data on the left\nThe simulation report result preview will be displayed here",
+    "setting.integration.parse_result": "Parsing result",
+    "setting.integration.entity_data_value": "Entity data value",
+    "setting.valid.string": "{1} field value must be of String type.",
+    "setting.valid.long": "{1} field value must be of Long type.",
+    "setting.valid.double": "{1} field value must be of Double type.",
+    "setting.valid.boolean": "{1} field value must be of Boolean type.",
+    "setting.valid.enum": "{1} field content is one of the enumeration items [{2}].",
+    "setting.valid.hex": "{1} field value must be hexadecimal type.",
+    "setting.valid.base64": "{1} field value must be Base64 type.",
+    "setting.valid.regex": "{1} field value must conform to the regular expression {2}.",
+    "setting.valid.len_range": "{1} field value length must be one of {2}.",
+    "setting.valid.fraction_digits": "The length of fraction digits for the {1} field value should be {2}.",
+    "setting.valid.url_image": "{1} field value should be a valid image URL."
 }
