feat: Complete the bind device logic of ai integration

--- a/packages/locales/src/lang/en/global.json
+++ b/packages/locales/src/lang/en/global.json
@@ -237,5 +237,6 @@
     "common.label.upload": "Upload",
     "common.placeholder.input_image_url": "Please enter image URL",
     "common.label.result": "Result",
-    "common.label.param_name": "Param Name"
+    "common.label.param_name": "Param Name",
+    "common.label.ai_model": "Model"
 }
