feat: Complete the device bind tab of AI integration

--- a/packages/locales/src/lang/en/global.json
+++ b/packages/locales/src/lang/en/global.json
@@ -238,5 +238,9 @@
     "common.placeholder.input_image_url": "Please enter image URL",
     "common.label.result": "Result",
     "common.label.param_name": "Param Name",
-    "common.label.ai_model": "Model"
+    "common.label.ai_model": "Model",
+    "common.label.connected": "Connected",
+    "common.label.not_connected": "Not Connected",
+    "common.label.normal": "Normal",
+    "common.label.abnormal": "Abnormal"
 }
