--- a/packages/locales/src/lang/cn/global.json
+++ b/packages/locales/src/lang/cn/global.json
@@ -232,5 +232,8 @@
     "valid.input.username": "用户名长度最小长度为5。",
     "valid.input.value": "输入值：仅{0}。",
     "valid.input.version": "版本号不符合规范。",
-    "valid.resp.at_least_one": "请至少选择一个{1}。"
+    "valid.resp.at_least_one": "请至少选择一个{1}。",
+    "common.label.page": "页",
+    "common.label.selected_count": "已选择",
+    "common.label.total_count": "总数"
 }
