--- a/packages/locales/src/lang/en/global.json
+++ b/packages/locales/src/lang/en/global.json
@@ -232,5 +232,8 @@
     "valid.input.username": "Minimum username length is 5.",
     "valid.input.value": "Input value: {0} only.",
     "valid.input.version": "The version number does not comply with the specification.",
-    "valid.resp.at_least_one": "Please select at least one {1}."
+    "valid.resp.at_least_one": "Please select at least one {1}.",
+    "common.label.page": "page",
+    "common.label.selected_count": "Selected",
+    "common.label.total_count": "Total"
 }
