feat: Real tiem rendering of inference result when bind device

--- a/packages/locales/src/lang/en/global.json
+++ b/packages/locales/src/lang/en/global.json
@@ -242,5 +242,6 @@
     "common.label.connected": "Connected",
     "common.label.not_connected": "Not Connected",
     "common.label.normal": "Normal",
-    "common.label.abnormal": "Abnormal"
+    "common.label.abnormal": "Abnormal",
+    "common.label.download": "Download"
 }
