fix: Remove redundant text

--- a/packages/locales/src/lang/en/setting.json
+++ b/packages/locales/src/lang/en/setting.json
@@ -95,14 +95,8 @@
     "setting.integration.ai_bind_device": "Bind Device",
     "setting.integration.ai_bind_device_choose_device": "Choose Device",
     "setting.integration.ai_bind_device_ai_settings": "AI Settings",
-    "setting.integration.ai_infer_mode_setting": "Inference mode settings",
+    "setting.integration.ai_infer_result_preview": "Inference Result Preview",
     "setting.integration.ai_infer_result_setting": "Inference result settings",
-    "setting.integration.ai_infer_result_area_setting": "{1} Regional settings",
-    "setting.integration.ai_infer_mode_add_area": "Add area",
-    "setting.integration.ai_infer_single_image": "Single-image inference",
-    "setting.integration.ai_infer_single_image_desc": "When the image data corresponding to the binding device is updated, the AI model API will be requested to obtain the inference result.",
-    "setting.integration.ai_infer_area_cut_image": "Area cut-image inference",
-    "setting.integration.ai_infer_area_cut_image_desc": "Multiple areas of the target image can be drawn, and the drawing areas can be sent to AI as images for inference.",
     "setting.integration.device_template": "Device template management",
     "setting.integration.mqtt_broker": "MQTT Broker",
     "setting.integration.valid_repeat_char": "No repeated characters",
