feat: Add table column setting feature

--- a/packages/locales/src/lang/cn/global.json
+++ b/packages/locales/src/lang/cn/global.json
@@ -235,5 +235,9 @@
     "valid.resp.at_least_one": "请至少选择一个{1}。",
     "common.label.page": "页",
     "common.label.selected_count": "已选择",
-    "common.label.total_count": "总数"
+    "common.label.total_count": "总数",
+    "common.label.columns_setting": "列设置",
+    "common.label.column_setting_fixed_left": "左（固定）",
+    "common.label.column_setting_fixed_right": "右（固定）",
+    "common.label.column_setting_non_fixed_column": "自适应列"
 }
