--- a/packages/locales/src/lang/cn/global.json
+++ b/packages/locales/src/lang/cn/global.json
@@ -233,5 +233,6 @@
     "valid.input.value": "输入值：仅{0}。",
     "valid.input.version": "版本号不符合规范。",
     "valid.resp.at_least_one": "请至少选择一个{1}。",
-    "common.label.connect_status": "状态"
+    "common.label.connect_status": "状态",
+    "common.valid.input_letter_num_special_char": "仅允许大小写字母、数字和 {1}。"
 }
