feat: device list change selected device group modal ui design phase 1

--- a/packages/locales/src/lang/en/global.json
+++ b/packages/locales/src/lang/en/global.json
@@ -236,5 +236,6 @@
     "common.label.description": "Description",
     "common.label.color": "Color",
     "common.label.expand": "Expand",
-    "common.label.collapse": "Collapse"
+    "common.label.collapse": "Collapse",
+    "common.label.batch_add": "Batch Add"
 }
