feat: device batch add ui design phase 1

--- a/packages/locales/src/lang/en/device.json
+++ b/packages/locales/src/lang/en/device.json
@@ -15,5 +15,6 @@
     "device.label.ungrouped_devices": "未分组",
     "device.label.edit_device_group": "编辑设备组",
     "device.tip.delete_device_group": "删除设备分组会将该分组下的所有设备的归属组置空。确认要删除该设备分组吗？",
-    "device.label.change_device_group": "Change Group"
+    "device.label.change_device_group": "Change Group",
+    "device.label.batch_add_device": "Batch Add Device"
 }
