--- a/packages/locales/src/lang/en/global.json
+++ b/packages/locales/src/lang/en/global.json
@@ -237,5 +237,7 @@
     "common.label.color": "Color",
     "common.label.expand": "Expand",
     "common.label.collapse": "Collapse",
-    "common.label.batch_add": "Batch Add"
+    "common.label.batch_add": "Batch Add",
+    "common.label.download_template": "Download Template",
+    "common.label.upload_file": "Upload File"
 }
