--- a/packages/locales/src/lang/cn/entity.json
+++ b/packages/locales/src/lang/cn/entity.json
@@ -23,6 +23,9 @@
     "entity.label.enumeration_items": "枚举项",
     "entity.label.historical_data": "历史数据",
     "entity.label.set_enumeration_items": "设置枚举项",
+    "entity.label.device_group": "Device Group",
+    "entity.label.entity_tags": "Entity Tags",
+    "entity.label.latest_value": "Latest Value",
     "entity.label.set_value": "设置值",
-    "entity.label.value_source": "值来源"
+    "entity.label.filter": "Filters"
 }
