--- a/packages/locales/src/lang/cn/entity.json
+++ b/packages/locales/src/lang/cn/entity.json
@@ -23,9 +23,10 @@
     "entity.label.enumeration_items": "枚举项",
     "entity.label.historical_data": "历史数据",
     "entity.label.set_enumeration_items": "设置枚举项",
+    "entity.label.set_value": "设置值",
     "entity.label.device_group": "Device Group",
     "entity.label.entity_tags": "Entity Tags",
     "entity.label.latest_value": "Latest Value",
-    "entity.label.set_value": "设置值",
-    "entity.label.filter": "Filters"
+    "entity.label.filter": "Filters",
+    "entity.label.parent_entity": "Parent Entity"
 }
