--- a/packages/locales/src/lang/cn/global.json
+++ b/packages/locales/src/lang/cn/global.json
@@ -241,5 +241,7 @@
     "common.label.column_setting_fixed_right": "右（固定）",
     "common.label.column_setting_non_fixed_column": "自适应列",
     "common.label.item_selected": "{1} 项选中",
-    "common.label.condition_any_equal": "其中任一"
+    "common.label.condition_any_equal": "其中任一",
+    "common.label.view_tags": "查看标签",
+    "common.label.view_all_tags": "点击查看全部标签"
 }
