--- a/packages/locales/src/lang/en/device.json
+++ b/packages/locales/src/lang/en/device.json
@@ -16,5 +16,7 @@
     "device.label.edit_device_group": "编辑设备组",
     "device.tip.delete_device_group": "删除设备分组会将该分组下的所有设备的归属组置空。确认要删除设备分组: {1}吗？",
     "device.label.change_device_group": "Change Group",
-    "device.label.batch_add_device": "Batch Add Device"
+    "device.label.batch_add_device": "Batch Add Device",
+    "device.tip.device_add_successful": "{1} 台设备添加成功",
+    "device.tip.device_add_failed": "{1} 台设备添加失败，请下载文件查看详情"
 }
