--- a/packages/locales/src/lang/en/global.json
+++ b/packages/locales/src/lang/en/global.json
@@ -245,5 +245,6 @@
     "common.label.is_adding": "正在添加",
     "common.label.all_tasks_completed": "全部执行完成",
     "common.label.tasks_has_been_interrupted": "任务被终止",
-    "common.button.download": "下载"
+    "common.button.download": "下载",
+    "common.label.action": "Action"
 }
