--- a/packages/locales/src/lang/en/global.json
+++ b/packages/locales/src/lang/en/global.json
@@ -258,5 +258,6 @@
     "common.label.item_selected": "{1} item selected",
     "common.label.condition_any_equal": "Any Equal",
     "common.label.view_tags": "View tags",
-    "common.label.view_all_tags": "Click to view all tags"
+    "common.label.view_all_tags": "Click to view all tags",
+    "common.label.clear_filter_condition": "Clear Search Criteria"
 }
